[package]
name = "savesink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = "4.4.12"
dirs-next = "2.0.0"
pancurses = "0.17"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]