[package]
name = "savesink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4.12", features = ["derive"] }
dirs-next = "2.0.0"
toml = "0.8.8"
serde = { version = "1.0.194", features = ["derive"] }
fs_extra = "1.3.0"
chrono = "0.4.31"
rpassword = "7.3.1"
secstr = "0.5.1"

[dependencies.cursive]
version = "0.20.0"
default-features = false
features = ["pancurses-backend"]
